src/test/ui/type-inference/sort_by_key.stderr
error[E0282]: type annotations needed
  --> $DIR/sort_by_key.rs:3:9
   |
LL |     lst.sort_by_key(|&(v, _)| v.iter().sum());
   |         ^^^^^^^^^^^                    --- help: consider specifying the type argument in the method call: `sum::<S>`
   |         |
   |         cannot infer type for type parameter `K` declared on the method `sort_by_key`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
